@@ -1,6 +1,7 @@
 0.0.9
  - fix: properly prolagate event extraction keyword arguments
  - fix: QueueCollectorThread used uint16 for enumerating indices
+ - fix: handle case where number of events is not multiple of chunk_size
  - enh: reduce thread waiting times
  - enh: add bounds check for image cache
 0.0.8
